--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 
                 <button class="btnC" id="reset">C</button>
                 <button class="btnSumDivRes" id="btnSumDivRes">+/-</button>
-                <button class="btnPorcentaje" id="btnPorcentaje">%</button>
+                <button class="btnPorcentaje" id="porcentaje">%</button>
                 <button class="btnDiv" id="division">÷</button>
                 <button class="btnMult" id="multiplicacion">x</button>
                 <button class="btnSum" id="suma">+</button>
                 <button class="btnRest" id="resta">-</button>
-                <button class="btnPunto" id="btnPunto">.</button>
+                <button class="btnPunto" id="punto">.</button>
                 <button class="btnBorrar" id="btnBorrar" type="reset"><img class="borrar" src="images/borrar.jpeg" alt="borrar"></button>
                 <button class="btnIgual" id="igual">=</button>
                 <button class="btnCero" id="cero">0</button>
